deploy/overlays/test/api-environment-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: portfolio-api
spec:
  template:
    spec:
      containers:
        - name: api
          env:
            - name: PORTFOLIO_ENVIRONMENT
              value: test
          startupProbe:
            httpGet:
              path: /test/api/health/live
          livenessProbe:
            httpGet:
              path: /test/api/health/live
          readinessProbe:
            httpGet:
              path: /test/api/health/ready
