deploy/overlays/test/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: portfolio-test
  labels:
    app.kubernetes.io/part-of: portfolio
    pod-security.kubernetes.io/enforce: restricted
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/warn: restricted
